--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,10 +1,40 @@
+@font-face {
+    font-family: 'Gotham-Bold';
+    src: url(../assets/fonts/Gotham-Bold.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Gotham-Book';
+    src: url(../assets/fonts/Gotham-Book.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Gotham-Light';
+    src: url(../assets/fonts/Gotham-Light.ttf) format('truetype');
+}
+@font-face {
+    font-family: 'Gotham-Medium';
+    src: url(../assets/fonts/Gotham-Medium.ttf) format('truetype');
+}
+
+@font-face {
+    font-family: 'PenumbraSansStd-Bold';
+    src: url(../assets/fonts/PenumbraSansStd-Bold.otf) format('opentype');
+}
+@font-face {
+    font-family: 'PenumbraSansStd-Regular';
+    src: url(../assets/fonts/PenumbraSansStd-Regular.otf) format('opentype');
+}
+@font-face {
+    font-family: 'PenumbraSansStd-Semibold';
+    src: url(../assets/fonts/PenumbraSansStd-Semibold.otf) format('opentype');
+}
+
 * {
     margin: 0;
     padding: 0;
 }
 
 header {
-    background-image: url(../assets/imgs/6.jpeg);
+    background-image: url(../assets/imgs/6_dark.jpg);
     width: 100%;
     height: 100vh;
     background-repeat: no-repeat;
@@ -18,4 +48,37 @@ nav {
     top: 0%;
     height: 80px;
     background-color: red;
+    z-index: 1;
+}
+
+#main-logo {
+    width: 80%;
+    max-width: 600px;
+    -webkit-filter: drop-shadow(0px 3px 52px rgba(34, 34, 34, 0.82));
+    filter: drop-shadow(0px 3px 25px rgba(34, 34, 34, 0.82));
+}
+
+#nosotros {
+    background-image: url(../assets/imgs/bg-img.jpg);
+    width: 100%;
+    height: 80vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    display: flex;
+    align-items: center;
+}
+main { }
+main section { }
+main section h2.title { }
+button.title { display: block;}
+.title {
+    font-family: 'PenumbraSansStd-Semibold', sans-serif;
+    color: #fff;
+    font-size: 2rem;
+}
+.text {
+    font-family: 'Gotham-Book', sans-serif;
+    color: #fff;
+    font-size: 1rem;
 }
