--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -32,7 +32,6 @@
     margin: 0;
     padding: 0;
 }
-
 header {
     background-image: url(../assets/imgs/6_dark.jpg);
     width: 100%;
@@ -41,7 +40,6 @@ header {
     background-size: cover;
     background-position: 50% 50%;
 }
-
 nav {
     width: 100%;
     position: fixed;
@@ -50,14 +48,12 @@ nav {
     background-color: red;
     z-index: 1;
 }
-
 #main-logo {
     width: 80%;
     max-width: 600px;
     -webkit-filter: drop-shadow(0px 3px 52px rgba(34, 34, 34, 0.82));
     filter: drop-shadow(0px 3px 25px rgba(34, 34, 34, 0.82));
 }
-
 #nosotros {
     background-image: url(../assets/imgs/bg-img.jpg);
     width: 100%;
@@ -76,9 +72,119 @@ button.title { display: block;}
     font-family: 'PenumbraSansStd-Semibold', sans-serif;
     color: #fff;
     font-size: 2rem;
+    text-align: center;
 }
 .text {
     font-family: 'Gotham-Book', sans-serif;
     color: #fff;
     font-size: 1rem;
+    text-align: center;
+}
+
+.button-style {
+    background-color: transparent;
+    border: 1px solid #FEDC0C;
+    line-height: 1;
+    padding: 8px 16px;
+    box-shadow: 0px 0px 6px 0px rgba(255,250,94,0.25);
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(255,250,94,0.25);
+    -moz-box-shadow: 0px 0px 6px 0px rgba(255,250,94,0.25);
+}
+
+.text-button {
+    font-family: 'Gotham-Medium', sans-serif;
+    font-size: 1rem;
+    color: #FEDC0C;
+    padding-right: .6em;
+    margin-bottom: 0;
+    display: inline-block;
+}
+
+.button-style-2 {
+    background-image: url(../assets/imgs/brown-bg.jpg);
+    background-position: 50% 50%;
+    border: 1px solid #FFFFFF;
+    line-height: 1;
+    padding: 8px 16px;
+    box-shadow: 0px 0px 6px 0px rgba(255,255,255,0.29);
+    -webkit-box-shadow: 0px 0px 6px 0px rgba(255,255,255,0.29);
+    -moz-box-shadow: 0px 0px 6px 0px rgba(255,255,255,0.29);
+}
+.text-button-2 {
+    font-family: 'Gotham-Medium', sans-serif;
+    font-size: 1rem;
+    color: #FFFFFF;
+    padding-right: .6em;
+    margin-bottom: 0;
+    display: inline-block;
+}
+
+.flechas {
+    filter: invert(77%) sepia(60%) saturate(701%) hue-rotate(351deg) brightness(110%) contrast(99%);
+    width: 12px;
+    height: auto;
+    /* border: 1px solid red; */
+}
+.flechas-white {
+    filter: invert(100%) sepia(0%) saturate(0%) hue-rotate(231deg) brightness(108%) contrast(101%);
+    width: 12px;
+    height: auto;
+}
+
+/* Nuestro menú */
+#nuestro-menu {
+    background-image: url(../assets/imgs/bg-img-2.jpg);
+    width: 100%;
+    height: 85vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50% 50%;
+    display: flex;
+    align-items: center;
+}
+
+#img-nuestro-menu {
+    width: 500px;
+}
+
+
+
+
+
+
+/* Medium Screen */
+@media screen and (max-width: 991.98px) {
+    #img-nuestro-menu {
+        width: 350px;
+    }
+    
+}
+
+/* Small screen */
+@media screen and (max-width: 767.98px) {
+    .title {
+        font-size: 1.6rem;
+    }
+    .text {
+        font-size: 0.9rem;
+        line-height: 1.6rem;
+    }
+
+    .text-button {
+        font-size: 0.9rem;
+    }
+    #nosotros {
+        height: 70vh;
+    }
+    #img-nuestro-menu {
+        width: 350px;
+        padding-top: 4rem;
+    }
+
+    #nuestro-menu {
+        height:110vh;
+    }
+
+
+    
 }
